; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarUI2FromDec.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarUI2FromDec.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DECIMAL = common dso_local global i32 0, align 4
@VarUI2FromDec = common dso_local global i32 0, align 4
@EXPECT_OVERFLOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_VarUI2FromDec to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_VarUI2FromDec() #0 {
  %1 = load i32, i32* @DECIMAL, align 4
  %2 = call i32 @CONVVARS(i32 %1)
  %3 = load i32, i32* @VarUI2FromDec, align 4
  %4 = call i32 @CONVERT_BADDEC(i32 %3)
  %5 = load i32, i32* @VarUI2FromDec, align 4
  %6 = call i32 @CONVERT_DEC(i32 %5, i32 0, i32 128, i32 0, i32 1)
  %7 = load i32, i32* @EXPECT_OVERFLOW, align 4
  %8 = load i32, i32* @VarUI2FromDec, align 4
  %9 = call i32 @CONVERT_DEC(i32 %8, i32 0, i32 0, i32 0, i32 0)
  %10 = call i32 @EXPECT(i32 0)
  %11 = load i32, i32* @VarUI2FromDec, align 4
  %12 = call i32 @CONVERT_DEC(i32 %11, i32 0, i32 0, i32 0, i32 1)
  %13 = call i32 @EXPECT(i32 1)
  %14 = load i32, i32* @VarUI2FromDec, align 4
  %15 = call i32 @CONVERT_DEC(i32 %14, i32 0, i32 0, i32 0, i32 65535)
  %16 = call i32 @EXPECT(i32 65535)
  %17 = load i32, i32* @VarUI2FromDec, align 4
  %18 = call i32 @CONVERT_DEC(i32 %17, i32 0, i32 0, i32 0, i32 65536)
  %19 = load i32, i32* @EXPECT_OVERFLOW, align 4
  %20 = load i32, i32* @VarUI2FromDec, align 4
  %21 = call i32 @CONVERT_DEC(i32 %20, i32 2, i32 128, i32 0, i32 100)
  %22 = load i32, i32* @EXPECT_OVERFLOW, align 4
  %23 = load i32, i32* @VarUI2FromDec, align 4
  %24 = call i32 @CONVERT_DEC(i32 %23, i32 2, i32 0, i32 0, i32 6553500)
  %25 = call i32 @EXPECT(i32 65535)
  %26 = load i32, i32* @VarUI2FromDec, align 4
  %27 = call i32 @CONVERT_DEC(i32 %26, i32 2, i32 0, i32 0, i32 6553600)
  %28 = load i32, i32* @EXPECT_OVERFLOW, align 4
  ret void
}

declare dso_local i32 @CONVVARS(i32) #1

declare dso_local i32 @CONVERT_BADDEC(i32) #1

declare dso_local i32 @CONVERT_DEC(i32, i32, i32, i32, i32) #1

declare dso_local i32 @EXPECT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
